# proyecto_IHM

proyecto_IHM/: AGENTS.md  CASO_PRACTICO.md  CMakeLists.txt  compass_tool.cpp  compass_tool.h  dibujos.cpp  dibujos.h  helpdialog.cpp  helpdialog.h  historydialog.cpp  historydialog.h  historydialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profiledialog.cpp  profiledialog.h  profiledialog.ui  questionbankdialog.cpp  questionbankdialog.h  questiondialog.cpp  questiondialog.h  registerdialog.cpp  registerdialog.h  registerdialog.ui  tool.cpp  tool.h  uiiconutils.h  useragent.cpp  useragent.h
proyecto_IHM/navdb/: navigation.cpp  navigationdao.cpp
proyecto_IHM/resources/: resources.qrc  stylesheet.qss
proyecto_IHM/resources/help/: ayuda.html
